--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "ai-chatbot",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x",
+    "pnpm": "10.x"
+  },
+  "packageManager": "pnpm@10.0.0",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
