--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,6 @@ BYPASS_JSON_VALIDATION=false
 
 # Get your TogetherAI API Key here: https://together.ai/ (optional)
 TOGETHER_API_KEY=****
+
+# Get your TwitterAPI.io API Key here: https://twitterapi.io/
+TWITTERAPIIO_API_KEY=****
