--- a/package.json
+++ b/package.json
@@ -63,8 +63,9 @@
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.3.19",
     "lucide-react": "^0.446.0",
+    "mermaid": "^10.9.1",
     "nanoid": "^5.0.8",
-    "next": "15.0.3-canary.2",
+    "next": "^15.1.0",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "orderedmap": "^2.1.1",
