--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ OPENROUTER_API_KEY=****
 # Get your Firecrawl API Key here: https://www.firecrawl.dev/
 FIRECRAWL_API_KEY=****
 
+# Enable or disable individual Firecrawl tools
+# Set to 'false' to disable specific Firecrawl functionality
+ENABLE_FIRECRAWL_SEARCH=false
+ENABLE_FIRECRAWL_EXTRACT=false
+ENABLE_FIRECRAWL_SCRAPE=false
+
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
 AUTH_SECRET=****
 
